# Chameleon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  sigcomm2023-artifact-evaluation.md
analysis/: overhead.py  plot_reconfiguration_complexity.py  plot_reconfiguration_time.py  plot_routing_table_size.py  plot_specification_complexity.py  plot_testbed.py  requirements.txt  testbed.py  timings.py  utils.py
atomic-command/: Cargo.toml
atomic-command/src/: lib.rs
bgpsim/: .gitignore  Cargo.toml  generate_topology_zoo.rs
bgpsim-macros/: Cargo.toml
bgpsim-macros/examples/: net.rs
bgpsim-macros/src/: ip.rs  lib.rs  net.rs
bgpsim-web/: .gitignore  Cargo.toml  Trunk.toml  index.css  index.html  tailwind.config.js
bgpsim-web/scenarios/: abilene_atomic.json  abilene_baseline.json  compuserve_atomic.json  eenet_atomic.json  example.json  example_baseline.json  hibernia_canada_atomic.json  jgn2plus_atomic.json  sprint_atomic.json
bgpsim-web/src/: context_menu.rs  dim.rs  http_serde.rs  latex_export.rs  main.rs  net.rs  point.rs  state.rs  tooltip.rs  tour.rs
bgpsim-web/src/draw/: add_connection.rs  arrows.rs  bgp_session.rs  canvas.rs  events.rs  forwarding_path.rs  link.rs  link_weight.rs  mod.rs  next_hop.rs  propagation.rs  router.rs  text.rs
bgpsim-web/src/header/: interactive.rs  main_menu.rs  migration_planner.rs  mod.rs  verifier.rs
bgpsim-web/src/sidebar/: button.rs  divider.rs  element.rs  external_router_cfg.rs  help.rs  migration_viewer.rs  mod.rs  multi_select.rs  queue_cfg.rs  select.rs  text_field.rs  toggle.rs  topology_cfg.rs  verifier_viewer.rs
bgpsim-web/src/sidebar/router_cfg/: bgp_cfg.rs  fw_policy_cfg.rs  mod.rs  route_map_item_cfg.rs  route_map_match_cfg.rs  route_map_set_cfg.rs  route_maps_cfg.rs  specification_cfg.rs  static_route_entry_cfg.rs  static_routes_cfg.rs
bgpsim/benches/: benchmark.rs  common.rs  roland.rs
bgpsim/src/: builder.rs  config.rs  external_router.rs  formatter.rs  forwarding_state.rs  interactive.rs  lib.rs  network.rs  ospf.rs  policies.rs  prelude.rs  record.rs  route_map.rs  router.rs  serde.rs
bgpsim/src/bgp/: mod.rs  state.rs
bgpsim/src/event/: mod.rs  queue.rs  rand_queue.rs
bgpsim/src/export/: cisco_frr.rs  cisco_frr_generators.rs  default.rs  exabgp.rs  mod.rs
bgpsim/src/test/: mod.rs  test_builder.rs  test_config.rs  test_forwarding_state.rs  test_network.rs  test_network_comlete_undo.rs  test_network_complete.rs  test_network_config.rs  test_ospf.rs  test_record.rs  test_roland.rs  test_route_map.rs  test_router.rs  test_save_restore.rs  test_topology_zoo.rs
bgpsim/src/test/test_export/: mod.rs
bgpsim/src/test/test_export/cisco/: external_config  external_config_pec  external_config_withdraw  external_config_withdraw_cmd  internal_config_full_mesh  internal_config_route_maps  internal_config_route_maps_pec  internal_config_route_reflection  mod.rs
bgpsim/src/test/test_export/exabgp/: config_1n.ini  config_1n_1p.py  config_1n_2p.py  config_1n_2p_withdraw.py  config_2n.ini  config_2n_2p_withdraw.py  config_2n_2p_withdraw_pec.py  mod.rs
bgpsim/src/test/test_export/frr/: external_config  external_config_pec  external_config_withdraw  external_config_withdraw_cmd  internal_config_full_mesh  internal_config_route_maps  internal_config_route_maps_pec  internal_config_route_reflection  mod.rs
bgpsim/src/topology_zoo/: mod.rs  topos.rs
bgpsim/src/types/: mod.rs  prefix.rs
cisco-lab/: .gitignore  Cargo.toml  Readme.md  build.rs
cisco-lab/config/: config.toml  routers.toml  tofino_controller.py
cisco-lab/examples/: abilene.rs  abilene_pec.rs  active.rs  cisco_shell.rs  inactive.rs  link_failure.rs  minimum_change.rs  minimum_change_flapping.rs  minimum_change_withdraw.rs  remove_link.rs  remove_session.rs  single_link.rs  test_net.rs  utils.rs
cisco-lab/src/: config.rs  lib.rs  ssh.rs
cisco-lab/src/router/: mod.rs
cisco-lab/src/router/session/: bgp.rs  mod.rs  ospf.rs  reset_config.rs  shell.rs  table_parser.rs
cisco-lab/src/server/: cmd.rs  exabgp.rs  mod.rs  session.rs  traffic_capture.rs
cisco-lab/src/test/: bgp.rs  config.rs  mod.rs  ospf.rs  reset_config.rs  traffic_capture.rs
cisco-lab/src/test/config/: config.toml  lab-vdc111.toml  lab-vdc112.toml  lab-vdc113.toml  lab-vdc114.toml  lab-vdc121.toml  lab-vdc122.toml  lab-vdc123.toml  lab-vdc124.toml  routers.toml  tofino_controller.py
cisco-lab/src/test/files/: bgp_table_detail  reset_config.cfg  reset_config_exp  show_ip_ospf_routes.xml  test_net_exabgp.conf  test_net_exabgp.py  test_net_exabgp_withdraw.py  test_net_netplan.conf  test_net_router_0.conf  test_net_router_2.conf
cisco-lab/src/tofino/: mod.rs  session.rs
examples/: abilene.rs  layer42.rs  paper_example.rs
src/: eval_overhead.rs  eval_scheduler.rs  eval_violation.rs  formatter.rs  lib.rs  main.rs  specification.rs
src/decomposition/: all_loops.rs  bgp_dependencies.rs  compiler.rs  mod.rs  visualizer.rs
src/decomposition/ilp_scheduler/: bgp_cost.rs  conditions.rs  has_changed.rs  loop_protection.rs  mod.rs  or_tools.rs
src/runtime/: controller.rs  mod.rs
src/runtime/lab/: executor.rs  mod.rs
src/runtime/sim/: executor.rs  mod.rs
src/test/: abilene.rs  builder.rs  mod.rs  route_reflection_dep.rs  simple_no_dependencies.rs  simple_route_reflection.rs  single_fw_dependency.rs
