[package]
name = "bgpsim-macros"
version = "0.11.0"
edition = "2021"

[lib]
name = "bgpsim_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits", "full"] }
ipnet = "2.7.0"

[dev-dependencies]
bgpsim = { path = "../bgpsim" }
