[package]
name = "cisco-lab"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ignore-routers = []

[dependencies]
bgpsim = { path = "../bgpsim", features = ["export", "topology_zoo"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geoutils = "0.5.1"
lazy_static = "1.4.0"
toml = "0.5.9"
ipnet = { version = "2.5.0", features = ["serde"] }
regex = "1.7.0"
itertools = "0.10.5"
thiserror = "1.0.37"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["fs", "process", "io-util", "time", "rt", "sync", "macros"] }
time = { version = "0.3.17", features = ["formatting", "local-offset"] }
async-trait = "0.1.60"
hex = "0.4.3"
roxmltree = "0.15.1"
tempfile = "3.3.0"

[dev-dependencies]
ctrlc = "3.2.3"
maplit = "1.0.2"
pretty_assertions = "1.3.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "signal"] }
bgpsim = { path = "../bgpsim", features = ["export", "topology_zoo", "rand"] }
generic-tests = "0.1.2"
